k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api-service
spec:
  selector:
    app: backend-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
